<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muklahhn.scorekeeperapp.MainActivity">

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/team_a_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goals"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="-"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/team_b_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_a_name"
            android:inputType="text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="incrementOneTeamA"
            android:text="+1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="incrementTwoTeamA"
            android:text="+2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="decrementOneTeamA"
            android:text="-1" />

    </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_b_name"
            android:inputType="text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="incrementOneTeamB"
            android:text="+1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="incrementTwoTeamB"
            android:text="+2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="decrementOneTeamB"
            android:text="-1" />

    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset"
        android:layout_centerHorizontal="true"
        android:onClick="shareResult"
        android:text="@string/share" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetResult"
        android:text="@string/reset" />

</RelativeLayout>
